# CNH-Simulated

./: README.md  build.sh  main.py  pyproject.toml  setup.py
core/: config.py  database.py
json/: config.json  perguntas.json
logic/: worker.py
ui/: animations.py  pages.py  widgets.py
