[project]
name = "cnh-simulated"
version = "1.0"
description = "A Python/PySide6 application for Brazilian Driver's License (CNH) exam simulation, featuring a local question bank and AI-generated questions via Google Gemini API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "pyinstaller>=6.19.0",
    "pyside6>=6.11.0",
    "python-dotenv>=1.2.2",
]
